[FIX]: correct typo

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
         </div>
 
         <div class="input-group__option">
-          <label for="has-symbold">symbols</label>
-          <input type="checkbox" name="has-symbold" id="has-symbold" />
+          <label for="has-symbol">symbols</label>
+          <input type="checkbox" name="has-symbol" id="has-symbol" />
         </div>
       </div>
 
