[FIX]: correct typo

--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
         </div>
 
         <div class="input-group__option">
-          <label for="has-symbol">symbols</label>
-          <input type="checkbox" name="has-symbol" id="has-symbol" />
+          <label for="has-symbols">symbols</label>
+          <input type="checkbox" name="has-symbols" id="has-symbols" />
         </div>
       </div>
 
