[FEAT]: add section to show password

--- a/index.html
+++ b/index.html
@@ -68,5 +68,7 @@
       <button type="submit">Submit</button>
       <button type="reset">Reset</button>
     </form>
+
+    <p id="password-place">Your password...</p>
   </body>
 </html>
