[FEAT]: replace 'submit' with 'generate' text in form button

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </div>
       </div>
 
-      <button type="submit">Submit</button>
+      <button type="submit">Generate</button>
       <button type="reset">Reset</button>
     </form>
 
