[FEAT]: copy to clipboard

--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
       <button type="reset">Reset</button>
     </form>
 
-    <p id="password-place">Your password...</p>
+    <div id="password-section">
+      <p id="password-field">Your password...</p>
+      <img src="assets/clipboard.svg" alt="clipboard icon" />
+    </div>
   </body>
 </html>
