[FEAT]: change title text

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <h1>Password Generator</h1>
-    <h2>Create a secure, customized, random password</h2>
+    <h2>Create a customized, secure password</h2>
 
     <form id="password-form">
       <h3>
